# e-cert-study

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml  vercel.json
backend/: .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_images.py  003_add_content_hash.py  004_add_study_plan.py  005_add_framework.py  006_add_review_items.py  007_add_mock_exams.py  008_add_image_unique_constraint.py  009_add_topic_column.py
backend/app/: main.py
backend/app/api/: answers.py  categories.py  chat.py  mock_exam.py  questions.py  review.py  stats.py  study_plan.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  answer.py  base.py  category.py  mock_exam.py  question.py  question_image.py  review_item.py  study_plan.py
backend/app/schemas/: answer.py  category.py  chat.py  mock_exam.py  question.py  question_api.py  review.py
backend/app/services/: caption_generator.py  category_classifier.py  chat_service.py  claude_cli.py  explanation_generator.py  framework_detector.py  image_converter.py  image_linker.py  image_matcher.py  image_storage.py  pdf_extractor.py  (+8 more)
backend/scripts/: __init__.py  classify_frameworks.py  fix_context_missing.py  fix_duplicate_images.py  fix_lime_question.py  fix_question_images.py  fix_question_images_v2.py  fix_question_quality.py  fix_reported_questions.py  generate_captions.py  investigate_reported_questions.py  label_topics.py  match_images.py  migrate_review_items.py  seed_e_cert_categories.py  update_question_images.py
backend/tests/: conftest.py  test_answer_review_integration.py  test_api_mock_exam.py  test_api_questions.py  test_api_stats.py  test_api_study_plan.py  test_categories.py  test_categories_restructure.py  test_category_classifier.py  test_chat_api.py  test_chat_schemas.py  test_chat_service.py  test_choice_dedup.py  test_claude_cli.py  test_config.py  test_content_type.py  test_delete_all_protection.py  test_duplicate_prevention.py  test_explanation_generator.py  test_finish_mock_exam_review.py  test_fix_context_missing.py  test_fix_duplicate_images_script.py  test_fix_lime_question.py  test_fix_question_images.py  test_fix_question_quality.py  test_fix_reported_questions.py  test_framework_detector.py  test_framework_tagging.py  test_generate_captions.py  test_health.py  test_image_binding.py  test_image_converter.py  test_image_matcher_service.py  test_image_storage.py  test_image_xref_dedup.py  test_import_category_assignment.py  test_import_framework.py  test_investigate_questions.py  test_label_topics.py  test_main.py  (+31 more)
(+302 files in other folders)
